Add dataset, plots, and trained models

--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,11 @@ __pycache__/
 *$py.class
 
 # Data
-data/
-results/
-*.csv
-*.png
-*.pth
+# data/
+# results/
+# *.csv
+# *.png
+# *.pth
 
 # Environment
 .env
